# wrap-solution

./: README.md  wrap.json  wrap.sh
litegallery/: .gitignore  Cargo.toml  readme.md
litegallery/src/: main.rs
lumixbackup/: .gitignore  Cargo.toml  README.md
lumixbackup/src/: main.rs
mousewalk/: Cargo.toml
mousewalk/src/: main.rs
wrap/: Cargo.toml  README.md
wrap/src/: main.rs
